@@ -3,6 +3,8 @@ x.y.z
 
 New features:
 
+* Middle-button support for selection rects
+
 Bug fixes:
 
 Other:
